# EzStrings

./: .gitignore  CMakeLists.txt  README.md  example.c
cmake/: EzStringsConfig.cmake.in  ez_strings_config.cmake.in
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
docs/html/d1/dc8/: structvl__config-members.html
docs/html/d2/d05/: structvl__color__scheme.html  structvl__color__scheme.js
docs/html/d3/d2b/: structvl__color.html  structvl__color.js
docs/html/d5/d2d/: struct_ez_string.html  struct_ez_string.js
docs/html/d7/d1b/: ez__strings_8h.html  ez__strings_8h.js  ez__strings_8h_source.html
docs/html/d8/d7d/: struct_ez_strings-members.html
docs/html/d9/d76/: structvl__color__scheme-members.html
docs/html/d9/d89/: struct_ez_strings.html  struct_ez_strings.js
docs/html/d9/df5/: structvl__color-members.html
docs/html/da/d25/: vibrant__logs_8h.html  vibrant__logs_8h.js  vibrant__logs_8h_source.html
docs/html/db/db9/: structvl__config.html  structvl__config.js
docs/html/de/daa/: struct_ez_string-members.html
docs/html/search/: all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_7.js  variables_8.js  variables_b.js
include/: ez_strings.h  vibrant_logs.h
lib/: timey.lib  vibrant_logs.lib
lib/dynamic/: ez_strings.lib
lib/static/: ez_strings.lib
src/: ez_strings.c
